--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <script src="https://use.fontawesome.com/8a6c550386.js"></script>
-    <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="/resources/css/reset.css" type="text/css" rel="stylesheet">
+    <link href="/resources/css/style.css" type="text/css" rel="stylesheet">
     
     <title>Colmar Academy</title>
 </head>
